@@ -5,6 +5,7 @@
 * Classifieds dummy content - ADDED
 * "Kingstudio" theme compatibility for gd pages sidebar - ADDED
 * Translation for "May" month abbreviation shows incorrect date - FIXED
+* 404 rescue setting not working for translated CPT slug - FIXED
 
 = 2.0.0.59 =
 * GD Listings widget title not working with pagination - FIXED
